# dual_file_table

./: CMakeLists.txt  add.c  clear.c  delete.c  dialog_table_functions.h  find.c  main.c  tests.c
Table/: Table.c  Table1.c  Table2.c  file.c
Table/tables_structures/: all_structures.h  file.h
